# cryptochat_client

./: .gitignore  Makefile  README.md  config.py  main.py  prototype.py  pyproject.toml
client/: api.py  auth.py  config.py
crypto/: constants.py  keys.py  keystore.py
front/: styles.tcss  tui.py
lib/: encryption.py  utils.py
storage/: metadata.py
