[project]
name = "chat-client"
version = "0.1.0"
description = "Secure CLI chat"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "argon2-cffi>=25.1.0",
    "cryptography>=46.0.2",
    "dotenv>=0.9.9",
    "keyring>=25.6.0",
    "mnemonic>=0.21",
    "requests>=2.32.5",
    "textual>=6.4.0",
    "textual-dev>=1.8.0",
    "websockets>=15.0.1",
]
